--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,13 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
-@import 'style'
+
+
+.navbar-custom {
+    padding: 15px;
+    font-size: 20px;
+}
+
+.email-initial {
+    background-color: white;
+    border-radius: 4px;
+}
