added(): Improve some layout in login and home. lol. (#3)
* wip(): Layouts.

* WIP

* added(): Improve some layout on login and home. lol.

* added(): Partial db design for user and account model.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,13 @@
- @import "bootstrap";
+@import 'bootstrap-sprockets';
+@import 'bootstrap';
+
+
+.navbar-custom {
+    padding: 15px;
+    font-size: 20px;
+}
+
+.email-initial {
+    background-color: white;
+    border-radius: 4px;
+}
