--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,10 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <%= yield %>
+    <div class="container-fluid">
+      <%= render 'shared/navbar' %>
+      <%= render 'shared/flash_message' %>
+      <%= yield %>
+    </div>
   </body>
 </html>
